[package]
name = "worker-rust"
version = "0.1.0"
edition = "2021"

# https://github.com/rustwasm/wasm-pack/issues/1247
[package.metadata.wasm-pack.profile.release]
wasm-opt = false

[lib]
crate-type = ["cdylib"]

[dependencies]
worker = "0.0.18"
urlencoding = "2.1.3"
sfen2png-wasm = { path = "../sfen2png-wasm" }

[profile.release]
lto = true
strip = true
codegen-units = 1
