[package]
name = "sfen2png-wasm"
version = "0.1.0"
authors = ["sugyan <sugi1982+github@gmail.com>"]
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
shogi-img = "0.2.0"
shogi_usi_parser = "0.1.0"
wasm-bindgen = "0.2.90"

[dev-dependencies]
wasm-bindgen-test = "0.3.34"

[profile.release]
# Tell `rustc` to optimize for small code size.
opt-level = "s"
